--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/first_database_spring
+spring.datasource.username=spring_app_usr
+spring.datasource.password=spring_app_password
+spring.jpa.show-sql=true
