--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/first_database_spring
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/first_database_spring
 spring.datasource.username=spring_app_usr
 spring.datasource.password=spring_app_password
 spring.jpa.show-sql=true
+# spring.mvc.format.date=yyyy-MM-dd
+# spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+# spring.mvc.format.time=HH:mm:ss
